# FlorianiAgent

./: .bazelrc  .gitignore  BUILD.bazel  CLAUDE.md  GOAL.md  MODULE.bazel  README.md
src/: main.cpp
src/agent/: BUILD.bazel  agent.cpp  agent.h  monitor.cpp  monitor.h  pipeline.cpp  pipeline.h
src/core/: BUILD.bazel  config.cpp  config.h  types.h
src/inbound-server/: BUILD.bazel  http_server.cpp  http_server.h
src/llm-link/: BUILD.bazel  i_llm_client.h  llm_client.cpp  llm_client.h
src/skills/: BUILD.bazel  host_skill_executor.cpp  host_skill_executor.h  skill_executor.h
src/storage/: BUILD.bazel  history_store.cpp  history_store.h  i_history_store.h
test/: agent_test.cpp  host_skill_executor_test.cpp  mock_client.cpp  pipeline_test.cpp
test/mocks/: mock_history_store.h  mock_llm_client.h  mock_skill_executor.h
