module(
    name = "floriani_agent",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "wolfd_bazel_compile_commands", version = "0.5.2")
bazel_dep(name = "sqlite3", version = "3.51.2.bcr.1")
bazel_dep(name = "yaml-cpp", version = "0.9.0")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
