load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "types",
    hdrs = ["types.h"],
    include_prefix = "core",
    copts = ["-std=c++17"],
    visibility = ["//visibility:public"],
    deps = ["//:nlohmann_json"],
)

cc_library(
    name = "config",
    srcs = ["config.cpp"],
    hdrs = ["config.h"],
    include_prefix = "core",
    copts = ["-std=c++17"],
    visibility = ["//visibility:public"],
    deps = ["@yaml-cpp"],
)
